--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src=photo.png" alt="Mohammed Yousuf Photo" height="150px"></img>
+        <img src="photo.png" alt="Mohammed Yousuf Photo" height="150px"></img>
       </td>
       <td>
         <h1>Mohammed Yousuf</h1>
